# master-thesis

./: .gitignore  CMakeLists.txt  README  README.md  analysedata.py  plotmodel.py  showcloud.py
data/: modeldata
data/calibration/: left_calibration.xml  right_calibration.xml
data/video/: model2.mpeg
report/: bibliography.bib  makereport.sh  report.tex
report/images/: model-program.dia  overview.dia  setup1.dia  setup2.dia  software.dia
src/: main.cpp  model.cpp
src/core/: Alignment.cpp  Alignment.hpp  CMakeLists.txt  CameraParameters.cpp  CameraParameters.hpp  DataSet.cpp  DataSet.hpp  DataSetProvider.cpp  DataSetProvider.hpp  LinearEigenTriangulation.cpp  LinearEigenTriangulation.hpp  Logger.cpp  Logger.hpp  MidPointTriangulation.cpp  MidPointTriangulation.hpp  OptimalTriangulation.cpp  OptimalTriangulation.hpp  SimpleProvider.cpp  SimpleProvider.hpp  Triangulation.hpp  Utils.cpp  Utils.hpp  WorkCollector.cpp  WorkCollector.hpp  WorkProvider.hpp  Worker.cpp  Worker.hpp
src/test/: Helper.cpp  Helper.hpp  all_tests.cpp  test_alignment.inc  test_triangulation.inc  test_utils.inc
